--- a/www/multiview.html
+++ b/www/multiview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RPi Cam Multiview</title>
+    <title>Dwight's Chicken Spy</title>
     <script language="javascript">
 		var mjpeg_img0,mjpeg_img1,mjpeg_img2;
  
